Se soluciona bug de overflow en resoluciones mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,9 +8,6 @@
 
 // -----------generals
 
-body {
-  overflow-x: hidden;
-}
 
 .getStartedButtons {
   max-width: 75%;
